# bevy-test

./: Cargo.toml  README.md
docs/: design.md  tasking.md
src/: main.rs
src/lib/: mod.rs
src/lib/debug/: mod.rs  plugin.rs
src/lib/debug/system/: mod.rs  quit.rs
src/lib/pathfinding/model/: mod.rs  path_node.rs
src/lib/physical/: mod.rs  state_of_matter.rs
src/lib/player/: mod.rs  player.rs  players.rs  plugin.rs  selection.rs
src/lib/player/model/: local_player.rs  mod.rs  player_state.rs
src/lib/player/system/: camera_movement.rs  mod.rs  raycast.rs  startup.rs  state_transition.rs
src/lib/space/: direction.rs  i3.rs  orientation.rs
src/lib/space/model/: direction.rs  facing.rs  i3.rs  mod.rs
src/lib/tasking/: mod.rs  plugin.rs  task_description.rs  task_kind.rs  task_set.rs
src/lib/tasking/model/: mod.rs  task.rs  task_processor.rs  task_scheduler.rs
src/lib/tasking/system/: mod.rs  schedule_tasks.rs
src/lib/terrain/: block.rs  chunk.rs  map.rs  mod.rs  plugin.rs  raycast.rs
src/lib/terrain/model/: block.rs  block_reader.rs  mod.rs
src/lib/terrain/system/: mod.rs  startup.rs
src/lib/unit/: mod.rs  plugin.rs  stance.rs
src/lib/unit/model/: dwarf.rs  mod.rs  stance.rs
src/lib/unit/system/: movement.rs
