[package]
name = "dwarfare"
version = "0.1.0"
authors = ["Martin Grönlund <3044707+martingronlund@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = [] }
bevy_mod_raycast = "0.2.2"
pathfinding = "2.1.5"
rand = "0.8.3"